--- a/authorization_code/public/pages/login.pug
+++ b/authorization_code/public/pages/login.pug
@@ -6,7 +6,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
-    title SB Admin 2 - Bootstrap Admin Theme
+    title Music Together
     // Bootstrap Core CSS
     link(href='../vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     // MetisMenu CSS
@@ -28,18 +28,17 @@ html(lang='en')
             .panel-heading
               h3.panel-title Please Sign In
             .panel-body
-              form(role='form')
+              form(action='/login')
                 fieldset
                   .form-group
-                    input.form-control(placeholder='E-mail', name='email', type='email', autofocus='')
-                  .form-group
-                    input.form-control(placeholder='Password', name='password', type='password', value='')
-                  .checkbox
-                    label
-                      input(name='remember', type='checkbox', value='Remember Me')
-                      | Remember Me
-                  // Change this to a button or input when using this as a form
-                  a.btn.btn-lg.btn-success.btn-block(href='index.html') Login
+                    input.form-control#eventcode(type='text', name='eventcode', placeholder='Event Code',autofocus='')
+                    //input.form-control(placeholder='Event Code', name='email', type='email', autofocus='')
+                    br
+                    button.btn.btn-lg.btn-success.btn-block(type='submit') Login with Spotify
+                    h4 Or
+                    button.btn.btn-info.btn-lg.btn-block(type='button')
+                      a(href='/host') Host an Event
+
     // jQuery
     script(src='../vendor/jquery/jquery.min.js')
     // Bootstrap Core JavaScript
