--- a/authorization_code/public/pages/smartplaylist.pug
+++ b/authorization_code/public/pages/smartplaylist.pug
@@ -17,7 +17,8 @@ html(lang='en')
     link(href='../vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
-    //if lt IE 9
+    //
+      if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
   body
@@ -83,8 +84,23 @@ html(lang='en')
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header Dashboard
-          // /.col-lg-12
+            h1.page-header Smart Playlist
+        .row
+          .col-lg-12
+            .embed-container
+              if eventtype == 'Club'
+                iframe(src='https://open.spotify.com/embed/user/xinthecity/playlist/4dyA4CQZ2Sh5xaB0Rxjnaa', width='300', height='380', frameborder='0', allowtransparency='true', allow='encrypted-media')
+              else if eventtype == 'House Party'
+                iframe(src='https://open.spotify.com/embed/user/12153386187/playlist/1QYBHwyg32qqXNGoT90BdG', width='300', height='380', frameborder='0', allowtransparency='true', allow='encrypted-media')
+              else if eventtype == 'Wedding'
+                iframe(src='https://open.spotify.com/embed/user/docxx214/playlist/5LkslaA3rvL7HrOI3tsPVu', width='300', height='380', frameborder='0', allowtransparency='true', allow='encrypted-media')
+              else if eventtype == 'Road Trip'
+                iframe(src= 'https://open.spotify.com/embed/user/12171203502/playlist/5xOFH8Ja8Acw7l80292YPt', width='900', height='900', frameborder='0', allowtransparency='true', allow='encrypted-media')
+              else if eventtype == 'Bar mitzvah'
+                iframe(src='https://open.spotify.com/embed/user/22karetc/playlist/77hHbjvGsKMSDvtHNXpQIW', width='300', height='380', frameborder='0', allowtransparency='true', allow='encrypted-media')
+
+              else
+                p 'Oops, something happened'
       // /#wrapper
       // jQuery
       script(src='../vendor/jquery/jquery.min.js')
