--- a/authorization_code/public/pages/importedsongs.pug
+++ b/authorization_code/public/pages/importedsongs.pug
@@ -93,12 +93,12 @@ html(lang='en')
               table#example.display(style='width:100%')
                 thead
                   tr
-                    th song_name
-                    th song_artists
-                    th count
-                    th song_tempo
-                    th song_popularity
-                    th song_danceability
+                    th Title
+                    th Artist
+                    th Count
+                    th Tempo
+                    th Popularity
+                    th Danceability
           .col-lg-12
             button.btn.btn-info.btn-lg.btn-block(type='button', onclick='refresh_user_data()') Refresh
       // /#wrapper
