--- a/authorization_code/public/pages/djprofile.pug
+++ b/authorization_code/public/pages/djprofile.pug
@@ -83,7 +83,7 @@ html(lang='en')
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header Dashboard
+            h1.page-header DJ Profile
           // /.col-lg-12
       // /#wrapper
       // jQuery
