--- a/authorization_code/public/pages/importedsongs.pug
+++ b/authorization_code/public/pages/importedsongs.pug
@@ -85,7 +85,7 @@ html(lang='en')
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header Dashboard
+            h1.page-header Imported Songs
           
 
           .col-lg-12
